--- a/README
+++ b/README
@@ -35,3 +35,9 @@ Suggested Boost Control Solenoids
 I used the readily avaiable GM 3-port boost control solenoids - AC Delco part number 214-474.  They seem to work fine though they are a bit noisy - take care where you mount them (ie don't screw them to the firewall as the noise will drive you nuts).  The software is currently configured to work with sensors that expect about a 60 Hz PWM signal
 
 
+Logging
+=======
+
+The system can stream live data via the serial port for logging purposes.  The feature was originally implemented to be used with Meters but I have been using it as a 'Poor Mans CSV Export'.  Press the '#' key while connected via serial and the system will start streaming data in this format:
+
+<actual pressure>,<requested pressure>,<duty (8-bit)>,<accelerator (8-bit)>,<rpm>,<egt in Celsius>,<P output>,<I output>,<D output>,<rpmScale>,<final PID output>,<elapsedTime>
