--- a/README
+++ b/README
@@ -38,10 +38,11 @@ I used the readily avaiable GM 3-port boost control solenoids - AC Delco part nu
 Logging
 =======
 
-The system can stream live data via the serial port for logging purposes.  The feature was originally implemented to be used with Meters but I have been using it as a 'Poor Mans CSV Export'.  Press the '#' key while connected via serial and the system will start streaming data in this format:
+The system can stream live data via the serial port for logging purposes.  Press the '#' key while connected via serial and the system will start streaming data in this format:
 
-<actual pressure>,<requested pressure>,<duty (8-bit)>,<accelerator (8-bit)>,<rpm>,<egt in Celsius>,<P output>,<I output>,<D output>,<rpmScale>,<final PID output>,<elapsedTime>
+mapCorrected,vntTargetPressure,vntPositionRemapped,tpsCorrected,rpmActual,pidOutput,n75precontrol,vntMinDc,vntMaxDc,mode,targetRatioKp,targetRatioKi,targetRatioKd,boostCalculatedP,boostCalculatedI,boostCalculatedD,temp1,auxOutput,millis( / 10)
 
+The output data can be captured with a tool like 'screen' and logged to disk. It can then be opened directly in a spreadsheet program like LibreOffice or Excel for graphing purposes.
 
 Updates
 =======
